--- a/packages/examples/project-a/public/index.html
+++ b/packages/examples/project-a/public/index.html
@@ -36,7 +36,7 @@
       const index = (await container.get('./index'))();
       console.log('exposed module ./index', index);
 
-      console.log("calling doSomething() from the exposed module ./index");
+      console.log('calling doSomething() from the exposed module ./index');
       await index.doSomething();
     </script>
   </head>
