--- a/packages/examples/project-b/public/index.html
+++ b/packages/examples/project-b/public/index.html
@@ -17,11 +17,11 @@
       await container.init(sharedScope);
       console.log('shared scope: ', JSON.stringify(sharedScope, null, 2));
 
-      console.log("doing container.get('./Button')");
-      const Button = (await container.get('./Button'))();
-      console.log('exposed module ./Button: ', Button);
+      console.log("doing container.get('./button')");
+      const Button = (await container.get('./button'))();
+      console.log('exposed module ./button: ', Button);
 
-      console.log(Button.Button('yay!'));
+      console.log(Button.someThingElse());
     </script>
   </head>
   <body>
