--- a/packages/examples/project-a/public/index.html
+++ b/packages/examples/project-a/public/index.html
@@ -10,6 +10,7 @@
         uuid: {
           '9.0.0': {
             get: () => () => Promise.resolve({ v4: () => ({ mock: 'uuid' }) }),
+            from: 'project-a',
           },
         },
       };
