--- a/packages/examples/project-a/public/index.html
+++ b/packages/examples/project-a/public/index.html
@@ -8,8 +8,9 @@
          * So we provide a fallback by directly registering it with the shared scope object.
          */
         uuid: {
-          '1.0.0': {
-            get: () => () => Promise.resolve({ v4: { mock: 'uuid' } }),
+          '9.0.0': {
+            get: () => () => Promise.resolve({ v4: () => ({ mock: 'uuid' }) }),
+            from: 'project-a',
           },
         },
       };
