feat: adding multiple output formats #23

--- a/packages/examples/project-b/public/esm/index.html
+++ b/packages/examples/project-b/public/esm/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Module Federation Experiments</title>
-    <script type="module">
+    <script type="module" id="example-code">
       const sharedScope = {};
 
       globalThis.sharedScope = sharedScope;
