--- a/packages/examples/project-a/public/esm/index.html
+++ b/packages/examples/project-a/public/esm/index.html
@@ -13,7 +13,9 @@
              * Return a factory that returns a Promise which returns a factory which returns the module
              */
             get: () =>
-              Promise.resolve(() => ({ v4: () => globalThis.crypto.randomUUID() })),
+              Promise.resolve(() => ({
+                v4: () => globalThis.crypto.randomUUID(),
+              })),
             from: 'project-a',
           },
         },
