fix: correcting the way to add uuid to shareScope (#34)
* fix: correcting the way to add uuid to shareScope

* fix: lint

* fix: adding the standard uuid fn

* fix: lint

--- a/packages/examples/project-a/public/esm/index.html
+++ b/packages/examples/project-a/public/esm/index.html
@@ -9,7 +9,13 @@
          */
         uuid: {
           '9.0.0': {
-            get: () => () => Promise.resolve({ v4: () => ({ mock: 'uuid' }) }),
+            /**
+             * Return a factory that returns a Promise which returns a factory which returns the module
+             */
+            get: () =>
+              Promise.resolve(() => ({
+                v4: () => globalThis.crypto.randomUUID(),
+              })),
             from: 'project-a',
           },
         },
