--- a/packages/examples/project-a/public/system/index.html
+++ b/packages/examples/project-a/public/system/index.html
@@ -11,7 +11,10 @@
          */
         uuid: {
           '9.0.0': {
-            get: () => () => Promise.resolve({ v4: () => ({ mock: 'uuid' }) }),
+            get: () =>
+              Promise.resolve(() => ({
+                v4: () => globalThis.crypto.randomUUID(),
+              })),
             from: 'project-a',
           },
         },
