--- a/packages/examples/project-b/public/system/index.html
+++ b/packages/examples/project-b/public/system/index.html
@@ -56,7 +56,9 @@
       <button id="load-remote-b">Load remote entry: project-b</button>
       <button id="init-remote-b">Init remote entry: project-b</button>
       <button id="load-exposed-button">Load exposed module ./button</button>
-      <button id="execute-someThingElse-button">Execute someThingElse() from ./button</button>
+      <button id="execute-someThingElse-button">
+        Execute someThingElse() from ./button
+      </button>
     </div>
   </body>
 </html>
