--- a/packages/examples/project-a/public/esm/index.html
+++ b/packages/examples/project-a/public/esm/index.html
@@ -22,7 +22,10 @@
         .addEventListener('click', async () => {
           console.log('doing container.init()');
           await container.init(sharedScope);
-          console.log('shared scope: ', __FEDERATION__.__SHARE__);
+          console.log(
+            'shared scope: ',
+            globalThis?.__FEDERATION__?.__SHARE__ ?? sharedScope,
+          );
         });
       document
         .getElementById('load-exposed-react')
