chore: update systemjs html

--- a/packages/examples/project-a/public/system/index.html
+++ b/packages/examples/project-a/public/system/index.html
@@ -90,6 +90,7 @@
     </style>
   </head>
   <body>
+    <h2>Click on the buttons left to right</h2>
     <h3>Open JS console to see logs.</h3>
     <h4>
       Type __FEDERATION__.__SHARE__ in the JS console to check the current state
